--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Aula de CSS</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css"/> <!--linka o arquivo CSS, 
+    tem que colocar todos esses itens-->
 </head>
 <body>
     <h2>Aula de CSS</h2>
-    <h2>CSS</h2>
+    <p>Formatando paragrafo</p>
+    linha 3
+    <p>Linha 4</p>
 </body>
 </html>
